src/test/resources/scripts/language/parser/invalid/cast/badNumCastFun.sbsc
// parser should error at invalid cast

num((): int -> 4));

return false;